<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <!--android:background="@drawable/xaxifondo"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_per_defecte">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_per_defecte"
            android:layout_weight="30"
            android:text="@string/nom"
            android:textAlignment="textEnd">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="70"
            android:layout_height="wrap_content"
            android:id="@+id/tilNom"
            >
            <EditText
                android:id="@+id/edtNom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nom_hint">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_per_defecte">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:text="@string/cog"
            android:textAlignment="textEnd"
            android:layout_marginEnd="@dimen/padding_per_defecte"
            >
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:id="@+id/tilCog"
            >
            <EditText
                android:id="@+id/edtCognoms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/cog_hint">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_per_defecte">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:text="@string/nif"
            android:textAlignment="textEnd"
            android:layout_marginEnd="@dimen/padding_per_defecte"
            >
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:id="@+id/tilNif"
            >
            <EditText
                android:id="@+id/edtNif"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nif_hint">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_per_defecte">
        <RadioGroup
            android:id="@+id/rdgSexe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <RadioButton
                android:id="@+id/rdoH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"/>
            <RadioButton
                android:id="@+id/rdoD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dona"/>
            <RadioButton
                android:id="@+id/rdoA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altres"/>
        </RadioGroup>
    </LinearLayout>
    <Spinner
        android:id="@+id/spnProvincies"
        android:padding="@dimen/padding_per_defecte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    </Spinner>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:padding="@dimen/padding_per_defecte">

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/baseline_arrow_back_ios_24"
            android:padding="30dp">

        </Button>
        <View
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="wrap_content">
        </View>
        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
            android:padding="30dp">
        </Button>
    </LinearLayout>
</LinearLayout>
